--- a/platformio.ini
+++ b/platformio.ini
@@ -9,34 +9,33 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env]
+debug_tool = stlink
+upload_protocol = stlink
 framework = arduino
-lib_deps = 
+lib_deps =
+  koendv/RTT Stream@^1.3.0
   adafruit/Adafruit MPU6050@^2.2.4
   adafruit/Adafruit ICM20X@^2.0.5
-
+extra_scripts = add_RTT_task.py
+monitor_port = socket://localhost:9090
+monitor_filters = send_on_enter
+monitor_eol = LF
+monitor_echo = yes
 
 [env:GD32F130C6]
 platform = https://github.com/CommunityGD32Cores/platform-gd32.git
 platform_packages = framework-arduinogd32@https://github.com/CommunityGD32Cores/ArduinoCore-GD32.git
 board = genericGD32F130C6
-debug_tool = stlink
-upload_protocol = stlink
 
 [env:GD32F130C8]
 platform = https://github.com/CommunityGD32Cores/platform-gd32.git
 platform_packages = framework-arduinogd32@https://github.com/CommunityGD32Cores/ArduinoCore-GD32.git
 board = genericGD32F130C8
-debug_tool = stlink
-upload_protocol = stlink
 
 [env:STM32F103C6]
 platform = ststm32
 board = genericSTM32F103C6
-debug_tool = stlink
-upload_protocol = stlink
 
 [env:STM32F103C8]
 platform = ststm32
 board = genericSTM32F103C8
-debug_tool = stlink
-upload_protocol = stlink
