--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ lib_deps =
   koendv/RTT Stream@^1.3.0
   adafruit/Adafruit MPU6050@^2.2.4
   adafruit/Adafruit ICM20X@^2.0.5
+  sui77/rc-switch@^2.6.4
 extra_scripts = add_RTT_task.py
 monitor_port = socket://localhost:9090
 monitor_filters = send_on_enter
