--- a/platformio.ini
+++ b/platformio.ini
@@ -10,12 +10,14 @@
 
 [env]
 debug_tool = stlink
+debug_build_flags = -O0 -g -ggdb
 upload_protocol = stlink
 framework = arduino
 lib_deps =
   koendv/RTT Stream@^1.3.0
   adafruit/Adafruit MPU6050@^2.2.4
   adafruit/Adafruit ICM20X@^2.0.5
+  adafruit/Adafruit AHRS@^2.3.3
   sui77/rc-switch@^2.6.4
 extra_scripts = add_RTT_task.py
 monitor_port = socket://localhost:9090
