Use simplefoc commander

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,8 @@ lib_deps =
   adafruit/Adafruit ICM20X@^2.0.5
   adafruit/Adafruit AHRS@^2.3.3
   sui77/rc-switch@^2.6.4
+  https://github.com/Candas1/Arduino-FOC.git
+lib_archive = false
 extra_scripts = add_RTT_task.py
 monitor_port = socket://localhost:9090
 monitor_filters = send_on_enter
@@ -29,11 +31,15 @@ monitor_echo = yes
 platform = https://github.com/CommunityGD32Cores/platform-gd32.git
 platform_packages = framework-arduinogd32@https://github.com/CommunityGD32Cores/ArduinoCore-GD32.git
 board = genericGD32F130C6
+build_flags = -D __PIO_DONT_SET_CLOCK_SOURCE__
+              -D __SYSTEM_CLOCK_48M_PLL_IRC8M_DIV2=48000000
 
 [env:GD32F130C8]
 platform = https://github.com/CommunityGD32Cores/platform-gd32.git
 platform_packages = framework-arduinogd32@https://github.com/CommunityGD32Cores/ArduinoCore-GD32.git
 board = genericGD32F130C8
+build_flags = -D __PIO_DONT_SET_CLOCK_SOURCE__
+              -D __SYSTEM_CLOCK_48M_PLL_IRC8M_DIV2=48000000
 
 [env:STM32F103C6]
 platform = ststm32
